<resources>
    <string name="app_name">中准</string>
    <string name="project_code_error">请输入正确的项目编码</string>
    <string name="user_login">用户登录</string>
    <string name="menu">菜单</string>
    <string name="jszzsj">江苏中准数据</string>
    <string name="btn_login">登录</string>
    <string name="empty_user_name">请输入用户名</string>
    <string name="empty_password">请输入密码</string>
    <string name="empty_pro_code">请输入项目码</string>
    <string name="out_put">出库</string>
    <string name="cancel_out">取消出库</string>
    <string name="return_out">退货入库</string>
    <string name="choose_pdt">选择产品</string>
    <string name="choose_agc">选择经销商</string>
    <string name="choose_order">选择订单</string>
    <string name="choose_child_order">选择子订单</string>
    <string name="parts_out">散件</string>
    <string name="case_out">箱</string>
    <string name="support_out">托</string>
    <string name="submit">提交</string>
    <string name="relation_case">组箱</string>
    <string name="relation_support">组托</string>
    <string name="cancel_relation_case">取消箱盒关联</string>
    <string name="cancel_relation_stack">取消箱托关联</string>
    <string name="add_label">补标</string>
    <string name="cancel_add_label">取消补标</string>
    <string name="today_count">当日出库统计</string>
    <string name="query_pdt">产品查询</string>
</resources>
