<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/query_pdt"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_query_parts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/parts_out"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/tv_query_case"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:text="@string/case_out"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/tv_query_support"
                    android:layout_width="0dp"
                    android:textColor="@color/text_color"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/support_out"
                    android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/iv_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            <ImageView
                    android:id="@+id/iv_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="44dp"
                android:hint="请扫描或者输入条码"
                android:background="@drawable/left_edit_bg"
                android:textColor="#333333"
                android:paddingStart="10dp"
                android:id="@+id/et_query_code"
                android:maxLines="1"
                android:textColorHint="#333333"

                />
        <TextView
                android:id="@+id/tv_query_pdt"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="查询"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/right_title_bg"
                />
    </LinearLayout>

    <TextView
            android:id="@+id/tv_pdt_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:layout_marginEnd="20dp"
            />
</LinearLayout>