<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/return_out"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_parts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/parts_out"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/tv_case"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/case_out"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/tv_support"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/support_out"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/iv_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            <ImageView
                    android:id="@+id/iv_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_oval_bg"
            android:elevation="10dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"

            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">


            <EditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/left_edit_bg"
                    android:hint="请扫描或输入条码"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:paddingStart="10dp" />

            <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/right_title_bg"
                    android:gravity="center"
                    android:text="提交"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

</LinearLayout>