<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel_out"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="52dp"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:orientation="horizontal">
            <TextView android:id="@+id/tv_parts"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:text="@string/parts_out"
                    android:textColor="@color/text_color"
                      android:textSize="18sp"
                      android:gravity="center"
            />
            <TextView
                    android:id="@+id/tv_case"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/case_out"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/tv_support"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/support_out"
                    android:textSize="18sp"
                    android:textColor="@color/text_color"
                    android:gravity="center"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="2dp"
                      android:orientation="horizontal">
            <ImageView
                    android:id="@+id/iv_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            <ImageView
                    android:id="@+id/iv_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/white_oval_bg"
                  android:elevation="10dp"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  android:layout_marginTop="20dp"
                  android:paddingTop="20dp"
                  android:paddingBottom="20dp"

    >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="44dp"
                      android:orientation="horizontal"
                      android:layout_marginStart="10dp"
                      android:layout_marginEnd="10dp"
                      android:layout_marginTop="10dp">


            <EditText android:id="@+id/et_code"
                    android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="3"
                      android:background="@drawable/left_edit_bg"
                    android:hint="请扫描或输入条码"
                    android:paddingStart="10dp"
                    android:textColorHighlight="@color/text_color"
                    android:textColor="@color/text_color"

            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tv_submit"
                    android:text="提交"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/right_title_bg"

            />
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

</LinearLayout>