<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              android:background="#fff"
              android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/user_login"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
    />

    <ImageView android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:src="@mipmap/logo"
               android:layout_marginTop="80dp"
               android:layout_gravity="center_horizontal"

    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:background="@drawable/white_oval_bg"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
    >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/jszzsj"
                  android:layout_marginTop="30dp"
                  android:textSize="22sp"
                  android:textColor="#333333"

        />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="8dp"
                  android:text="专用防伪  物流  防窜货系统"
                  android:textSize="18sp"
                  android:textColor="#333333"

        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="44dp"
                      android:orientation="horizontal"
                      android:layout_marginRight="30dp"
                      android:layout_marginLeft="30dp"
                      android:layout_marginTop="30dp"
                      android:background="@drawable/edit_oval_bg"
        >

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:layout_marginLeft="15dp"
                       android:src="@mipmap/user"
            />

            <EditText
                    android:id="@+id/et_username"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:hint="请输入用户名"
            />

        </LinearLayout>



        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="44dp"
                      android:orientation="horizontal"
                      android:layout_marginRight="30dp"
                      android:layout_marginLeft="30dp"
                      android:layout_marginTop="20dp"
                      android:background="@drawable/edit_oval_bg"
        >

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:layout_marginLeft="15dp"
                       android:src="@mipmap/pwd"
            />

            <EditText
                    android:id="@+id/et_password"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:inputType="textPassword"
                    android:hint="请输入密码"

            />

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="44dp"
                      android:orientation="horizontal"
                      android:layout_marginRight="30dp"
                      android:layout_marginLeft="30dp"
                      android:layout_marginTop="20dp"
                      android:background="@drawable/edit_oval_bg"
        >

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:layout_marginLeft="15dp"
                       android:src="@mipmap/prt"
            />

            <EditText
                    android:id="@+id/et_pro_code"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:hint="请输入项目码"

            />

        </LinearLayout>

        <Button
                android:id="@+id/btn_login"
                android:text="@string/btn_login"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/main_oval"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="26dp"
        />


    </LinearLayout>

</LinearLayout>